update(backend): add main views rendering
